# jobfit

./: .coderabbit.yaml  .env.example  .gitignore  .replit  AGENT.md  CLAUDE.md  LICENSE  Makefile  README.md  build.sh  main.py  opencode.json  pyproject.toml  replit.nix  start.sh
.agent/memory/: PRD.md  active_context.md  api_schema.md  tech_spec.md  technical_feasibility.md  ui_ux_design.md
.agent/rules/: continuous_documentation.md  git_branch_strategy.md  git_convention.md  language_preference.md  project_documentation.md  python_environment.md  replit_deployment.md  security_pii.md
.agent/skills/elevenlabs_voice/: SKILL.md
.agent/skills/embedding-skill-matching/: SKILL.md
.agent/skills/git_analyzer/: SKILL.md
.agent/skills/nvidia_parser/: SKILL.md
.agent/skills/python-coding-standards/: SKILL.md
.agent/skills/react-nextjs-frontend/: SKILL.md
.agent/skills/tdd-methodology/: SKILL.md
.agent/workflows/: deploy_check.md
.claude/commands/: commit.md  company-analyze.md  gap-analysis.md  git-push.md  lint.md  roadmap.md  setup.md  start-client.md  start-server.md  test-jd.md  test-resume.md
.claude/rules/: 01-korean.md  02-python-uv.md  03-git-convention.md  04-security.md  05-project-structure.md  06-api-patterns.md  07-claude-agent.md  08-embedding-matching.md
.claude/skills/git-convention/: SKILL.md
.claude/skills/owasp-security/: SKILL.md
.gemini/: antigravity.toml
.opencode/skills/jobfit-api-client/: SKILL.md
.opencode/skills/jobfit-backend/: SKILL.md
.opencode/skills/jobfit-frontend/: SKILL.md
.opencode/skills/jobfit-git/: SKILL.md
.opencode/skills/jobfit-refactor-bugfix/: SKILL.md
client/: package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  main.tsx
client/src/components/: GitConnectModal.tsx
client/src/hooks/: useAudioRecorder.ts  useElevenLabsConversation.ts  useElevenLabsTTS.ts
client/src/lib/: api.ts  authStore.ts  store.ts
client/src/pages/: CompaniesPage.tsx  Dashboard.tsx  DashboardPage.tsx  Interview.tsx  InterviewFeedbackPage.tsx  InterviewHistoryPage.tsx  InterviewPage.tsx  ProblemPage.tsx  ProfilePage.tsx  RoadmapPage.tsx
data/fixtures/: ai_engineer_jd.json  backend_engineer_jd.json  robotics_architect_jd.json  김테크_profile.json  박리드_profile.json  이시스템_profile.json
docs/: DEMO_SCENARIO.md  NVIDIA 모델 기반 JobFit 구현 모델 추천.md  antigravity_설정_가이드.md  elevenlabs-agent-prompt.md  feature_guide.md  interview-replit-stability-plan.md  use_plan_replit.md
docs/01-plan/features/: interview.plan.md
docs/02-design/features/: interview.design.md
docs/03-analysis/: interview.analysis.md
docs/04-report/features/: interview.report.md
server/: main.py
server/app/agents/: __init__.py  matching_agent.py  problem_generator.py  roadmap_agent.py  unified_matching_agent.py
server/app/core/: auth.py  config.py  database.py  init_db.py
server/app/models/: __init__.py  application.py  db_models.py  interview.py  (+3 more)
tests/: test_nvidia_parse.py
(+54 files in other folders)
