[project]
name = "jobfit-server"
version = "0.1.0"
description = "JobFit Backend Server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "elevenlabs>=1.0.0",
    "websockets>=13.1",
    "pydantic-settings>=2.12.0",
    "pillow>=12.1.0",
    "pymupdf>=1.26.7",
    "python-multipart>=0.0.22",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
    "playwright>=1.58.0",
    "numpy>=2.4.1",
    # Claude Agent + LangGraph
    "langgraph>=0.2.0",
    "anthropic>=0.40.0",
    # Git Push
    "PyGithub>=2.1.1",
    # Database (Replit PostgreSQL)
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server/app"]
